# Agente_IA_OyP_6.0

./: .env.example  .gitignore  2.0.0  CHANGELOG.md  CHANGE_POLICY.md  EXEC_PLAN.md  GAP_ANALYSIS.md  QUICK_START.md  README.md  activate_env.bat  alembic.ini  auditoria.ps1  check_env_vars.bat  check_env_vars_directly.bat  check_environment.py  check_imports_working.py  check_packages.py  check_python.py  check_python_directly.bat  check_python_simple.bat  ejecutar_orden3.bat  env_check.txt  env_test_output.txt  execute_orden1.ps1  get_info.bat  iniciar_servicios.ps1  install_all_services.py  manage.py  output_test.txt  requirements-updated.txt  requirements.txt  run_gateway.bat  run_gateway.py  service_manager.py  setup.py  setup_ai_engine_v6.py  setup_analytics_engine.py  setup_and_test.bat  setup_continuation.py  setup_document_processor.py  (+26 more)
.venv_clean/: pyvenv.cfg
RESPALDO_SEGURIDAD_TOTAL/: pyproject.toml  test_output.txt
RESPALDO_SEGURIDAD_TOTAL/gateway/: .env.example  app.py  check_env.py  check_paths.py  main.py  requirements.txt  simple_app.py  test_imports.py
RESPALDO_SEGURIDAD_TOTAL/gateway/.venv_fresh/: pyvenv.cfg
RESPALDO_SEGURIDAD_TOTAL/gateway/.venv_new/Scripts/: activate
RESPALDO_SEGURIDAD_TOTAL/gateway/config/: database.py
RESPALDO_SEGURIDAD_TOTAL/gateway/jobs/: manager.py
RESPALDO_SEGURIDAD_TOTAL/gateway/middleware/: auth.py
RESPALDO_SEGURIDAD_TOTAL/gateway/models/: project.py  task.py
RESPALDO_SEGURIDAD_TOTAL/gateway/routers/: projects.py  reports.py
RESPALDO_SEGURIDAD_TOTAL/gateway/routes/: api.py
RESPALDO_SEGURIDAD_TOTAL/gateway/schemas/: __init__.py
RESPALDO_SEGURIDAD_TOTAL/gateway/src/: __init__.py  service_monitor.py
RESPALDO_SEGURIDAD_TOTAL/gateway/static/js/: dashboard.js  main.js
RESPALDO_SEGURIDAD_TOTAL/gateway/templates/: index.html  index.html.bak  index.html0004.txt  index_backup_20250821_213731.html.txt  index_claude02.txt  index_new.html  index_new.html.txt  index_old_02.html.txt
RESPALDO_SEGURIDAD_TOTAL/services/ai-engine/: requirements.txt  test_setup.py
RESPALDO_SEGURIDAD_TOTAL/services/ai-engine/config/: default.env
RESPALDO_SEGURIDAD_TOTAL/services/ai-engine/routers/: analysis.py  generation.py  models.py
RESPALDO_SEGURIDAD_TOTAL/services/ai-engine/services/: model_manager.py
RESPALDO_SEGURIDAD_TOTAL/services/ai-engine/src/: main.py
RESPALDO_SEGURIDAD_TOTAL/services/ai-engine/utils/: logging_config.py
RESPALDO_SEGURIDAD_TOTAL/services/analytics-engine/: setup_analytics_engine.py
RESPALDO_SEGURIDAD_TOTAL/services/analytics-engine/config/: default.env
RESPALDO_SEGURIDAD_TOTAL/services/document-processor/: app.py  requirements.txt  setup_document_processor.py
RESPALDO_SEGURIDAD_TOTAL/services/gateway/: Dockerfile  README.md  requirements.txt
RESPALDO_SEGURIDAD_TOTAL/services/report-generator/: setup_report_generator.py
backup_limpieza_total/gateway_services_20250902_005108/: .env.example  docker-compose.yml  pyproject.toml
backup_limpieza_total/gateway_services_20250902_005108/jobs/: models.py
backup_limpieza_total/gateway_services_20250902_005108/ws/: manager.py
(+213 files in other folders)
