[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agente_ia_oyp"
version = "6.0.0"
description = "Sistema de Agente Inteligente para Operaciones y Procesos"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Equipo de Desarrollo Agente IA OyP", email = "desarrollo@agenteiaoyp.com"}
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "sqlalchemy>=1.4.0",
    "httpx>=0.23.0",
    "python-dotenv>=0.19.0",
    "pydantic>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pylint>=3.0.2",
    "black>=23.11.0",
    "mypy>=1.7.1",
    "pytest-mock>=3.12.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=gateway --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
